--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
 atomicwrites==1.4.0
 attrs==20.3.0
 autopep8==1.5.4
+backcall==0.2.0
 click==7.1.2
 colorama==0.4.4
+decorator==4.4.2
+Faker==5.6.1
 flake8==3.8.4
 Flask==1.1.2
 iniconfig==1.1.1
+ipython==7.19.0
+ipython-genutils==0.2.0
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 packaging==20.8
+parso==0.8.1
+pg8000==1.16.6
+pickleshare==0.7.5
 pluggy==0.13.1
+prompt-toolkit==3.0.10
 psycopg2==2.8.6
 py==1.10.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+Pygments==2.7.4
 pyparsing==2.4.7
 pytest==6.2.1
 pytest-flake8==1.0.7
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+scramp==1.2.0
+six==1.15.0
+testing.common.database==2.0.3
+testing.postgresql==1.3.0
+text-unidecode==1.3
 toml==0.10.2
+traitlets==5.0.5
+wcwidth==0.2.5
 Werkzeug==1.0.1
